--- a/_posts/2019-07-06-the-us-narrative-today.html
+++ b/_posts/2019-07-06-the-us-narrative-today.html
@@ -2626,107 +2626,107 @@ stories:
   domain: http://www.gladwinmi.com/
   link: https://www.gladwinmi.com/community/join-for-hymn-sing/article_f67b751a-978a-11e9-9aa4-8be069a542ef.html
 images:
-- name: castle-wall-DSC-0067-satan-red.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-satan-red.JPG
-- name: dc-statue-dcstatue-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purple-pond.jpg
-- name: oldtrain-oldtrain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-yellow-collage.jpg
-- name: dragon-desert-desert-dragon-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-color.jpg
-- name: gypsymosaic-gypsy-eyes-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-pond.jpg
-- name: mistywoods-babyfoot-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crafty-painting.jpg
-- name: razorwire-DSC-0080-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-green-zuma.jpg
-- name: oldcabin-store-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-creativity.jpg
-- name: cargo-ship-cargo-ship-on-sea-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-feed-people.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-electricity.jpg
-- name: blossombar-really-hot-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-50-62.jpg
-- name: old-door-lock-old-door-lock-2-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-internet-numbers.jpg
-- name: paris-paris-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smooth-ride.jpg
-- name: berlinwall2-berlinwall-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-internet-numbers.jpg
-- name: liberty-back-statue-liberty-back-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-wols.jpg
-- name: aws-s3-square-file-00-00-24-99-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-24-99-square.jpg
-- name: legal-statue-legalstatue-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-monet-one.jpg
-- name: lincoln-memorial-lincolnmemorial-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-dream.jpg
-- name: subway-subway-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alberto-giacometti.jpg
-- name: fence-mexico-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-creativity.jpg
-- name: aws-s3-desertrun-desertrun-still-2560.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-2560.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-attack-planes.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-attack-planes.JPG
-- name: machine-road-machine-road-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-two.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-crabapple.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crabapple.JPG
-- name: art-museum-art-museum-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-aqua.jpg
-- name: copper-circuit-IMG_6441.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6441.jpg
-- name: window-window-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-satan-red.jpg
-- name: art-museum-art-museum-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit-2.jpg
-- name: oldroad-old-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
-- name: store-on-corner-store-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-aqua.jpg
-- name: window-window-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-yellow-paper.jpg
-- name: dc-statue-dcstatue-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-aqua.jpg
-- name: status-berlin-status-berlin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
-- name: paris-paris-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crafty-painting.jpg
-- name: downtown-trucksilo-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-plentiful.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
-- name: scream-IMG_7936.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7936.jpg
-- name: aws-s3-blossombar-blossombar-still-600.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-600.png
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: oldhousecars-house-old-cars-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-nazi-poster.jpg
-- name: downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
-- name: mistywoods-babyfoot-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purple-storm.jpg
-- name: machine-road-machine-road-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-nazi-poster.jpg
-- name: beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
-- name: oldhouse-oldhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-dali.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-- name: castle-wall-DSC-0067-hot-spicy.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-hot-spicy.JPG
-- name: downtheline-downtheline-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
-- name: hollywood-building-hollywood-building-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-brush.jpg
-- name: carry-load-carryload-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-gred-mash.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-feed-people.jpg
+- name: razorcliff-razorcliff-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
+- name: razorcliff-razorcliff-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-constitution.jpg
+- name: mediterranean-mediterranean-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smooth-ride.jpg
+- name: liberty-back-statue-liberty-back-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-crunch-paper.jpg
+- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+- name: server-cloud-server-racks-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
+- name: windowmountain-window-mountain-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smoking-cigarette.jpg
+- name: border-crossing-bordercrossing-purple-storm.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purple-storm.png
+- name: oldcabin-store-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-asteroids.jpg
+- name: containership-containership-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-gan-vogh.jpg
+- name: abandonedbuildings_atari_asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_atari_asteroids.jpg
+- name: locked-up-steam-lock-up-steam-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-clean-view.jpg
+- name: abandonedbuildings_diego_rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_diego_rivera1.jpg
+- name: berlinwall-DSC-0084-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-neo-instinct.jpg
+- name: rockingchair-rockingchair.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair.jpg
+- name: aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1.jpg
+- name: art-museum-art-museum-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-deep-connections.jpg
+- name: containership-containership-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-graham-sutherland.jpg
+- name: old-door-lock-old-door-lock-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-pablo-blue.jpg
+- name: san-francisco-street-view-san-francisco-street-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view.jpg
+- name: old-school-house-old-schoolhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-graham-sutherland.jpg
+- name: catacombs-catacombs-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-sunday.jpg
+- name: adam-smith-adam-smith-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-rain.jpg
+- name: old-door-lock-old-door-lock-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit-5.jpg
+- name: statue-of-liberty-front-view-statueofliberty-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crafty-painting.jpg
+- name: subway-subway-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-far-away.jpg
+- name: beach-clouds-lifeguard-beachclouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-smoking-cigarette.jpg
+- name: victoria-victoria-corner-hotel-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-alberto-giacometti.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colorful-blocks.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
+- name: lincoln-memorial-lincolnmemorial-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-hot-spicy.jpg
+- name: ellis-island-ellis-island-room-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-purple-pond.jpg
+- name: walled-garden-walled-garden-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dark-dali.jpg
+- name: white-house-lawn-white-house-window-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-dali.jpg
+- name: amusement-park-amusement-park-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-alien-goggles.jpg
+- name: death-valley-death-valley-national-park-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-sand-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
+- name: sand-hand-sand-hand-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-mucha-mult.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night.jpg
+- name: yosemite-yosemite-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-light-dali.jpg
+- name: oldhotel-oldhotel-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-space-pizza.jpg
+- name: power-lines-power-lines-empty-space-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-umberto-bocc.jpg
+- name: aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+- name: crow-crow-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-dream.jpg
+- name: birdhouse-birdhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
+- name: oldcabin-store-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-sunday.jpg
+- name: store-on-corner-store-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-circuit.jpg
+- name: castle-wall-DSC-0067-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-plentiful.JPG
+- name: art-museum-art-museum-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-pablo-blue.jpg
 ---
 North Korea Nuclear Freeze? Finally, A Realistic Proposal.&nbsp;Months Of Aftershocks Could Follow Big California Earthquake.&nbsp;Sunrail Train Hits Vehicle, Causing Delays In Maitland, Winter Park Area.&nbsp;Apparent On Its Face.&nbsp;Burglary Suspect Arrested After Evading Authorities.&nbsp;Hometown Of First On Moon Ready To Launch 50th Celebration.&nbsp;Zion Williamson Out For Summer League With Bruised Knee.&nbsp;Councilman Playing With Fire And Dissing On Neighbors.&nbsp;
